Corrections contrastes

--- a/style.css
+++ b/style.css
@@ -222,7 +222,7 @@ a,
 }
 
 .d-bloc .panel button:hover {
-    color: rgba(0, 0, 0, .7);
+    color: rgba(255, 255, 255, .7);
 }
 
 .d-bloc .panel-icon {
@@ -254,7 +254,7 @@ a,
 
 .d-bloc .panel button:hover,
 .l-bloc button:hover {
-    color: rgba(0, 0, 0, .7);
+    color: rgba(255, 255, 255, .85);
 }
 
 .l-bloc .icon-round,
@@ -880,7 +880,7 @@ h4 {
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF;
+    color: #000;
 }
 
 .btn-atomic-tangerine:hover, .btn-atomic-tangerine:focus {
